--- a/P1BD/WebSite/src/App.css
+++ b/P1BD/WebSite/src/App.css
@@ -1,38 +1,132 @@
-.App {
+#root {
+  margin: 0 auto;
+  padding: 0.5rem;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+
+.card {
+  padding: 0rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+.card {
+
+  background: rgb(44, 44, 44);
+  font-family: "Courier New", Courier, monospace;
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+
+  
+}
+.card_wrapper{
+  display: flex;
+  flex-direction: row;
+  
+
+}
+.card_title {
+  color: white;
+  font-weight: bold;
+  padding: 5px 10px;
+  border-bottom: 1px solid rgb(167, 159, 159);
+  font-size: 0.95rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card_data {
+  font-size: 0.8rem;
+  color: black;
+  display:flex;
+  flex-direction: column;
+  height: 20rem;
+  border-right: 1px solid rgb(203, 203, 203);
+  border-left: 1px solid rgb(203, 203, 203);
+  border-bottom: 1px solid rgb(203, 203, 203);
+  align-items: start;
+  align-content: start;
+  background: rgb(44, 44, 44);
+  overflow: hidden;
+  overflow-y: auto;
+  overflow-x: auto;
+ 
+  max-width: 80rem;
+
+}
+
+.row{
+  text-align: left;
+  margin-top: 0rem;
+  margin-bottom: 0.13rem;
+  padding-left: 0rem;
+  display: flex;
+  flex-direction: row; 
+  width: fit-content;
+
+  
+
+
+}
+
+.item {
+  background-color: white;
+  width: 10rem;
+  padding-left: 0.5rem;
+  padding-right: 0.8rem;
+  height:auto;
+  overflow-wrap: break-word;
+  overflow: hidden;
+  user-select: none;
+  cursor:pointer;
+
+}
+
+.menu_var{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  max-height: 3rem;
+  color:white;
+  background-color: rgb(44, 44, 44);
 }
 
-.App-link {
-  color: #61dafb;
+
+.item-head{
+  color:white;
+  background-color: rgb(42, 40, 40) !important;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.item:nth-child(even) {
+  background: rgb(234, 235, 234);
+}
+
+.floating-frame{
+  overflow-x: hidden;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  transform: translateZ(0);
+  z-index: 10;
+  display: flex;
+  justify-content: center; /* Horizontal centering */
+  align-items: center; 
+
+
+  
+
+  background-color: rgba(57, 59, 59, 0.626);
+
+}
+
+.row-head li{
+
+  color:white;
+  background-color: rgb(42, 40, 40) !important;
+
+
+
 }
